clients module frontend

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
         <div class="content">
             <p>
-                <div class="pure-g pure-u-1">
-                    <table class="pure-table pure-u-1">
-                        <thead class="pure-u-1">
+                <!-- <div class="pure-g pure-u-1"> -->
+                    <table>
+                        <thead>
                             <tr>
                                 <th width="30%">Nome</th>
                                 <th width="30%">Email</th>
@@ -82,7 +82,7 @@
 
                         </tbody>
                     </table>
-                </div>
+                <!-- </div> -->
             </p>
 
             <hr>
@@ -132,22 +132,22 @@
 
         <div class="content">
             <p>
-                <div class="pure-g pure-u-1">
-                    <table class="pure-table pure-u-1">
-                        <thead class="pure-u-1">
+                <!-- <div class="pure-g pure-u-1"> -->
+                    <table>
+                        <thead>
                             <tr>
-                                <th width="30%">Nome</th>
-                                <th width="30%">Email</th>
-                                <th width="30%">Telefone</th>
-                                <th width="10%">Actions</th>
+                                <th>Nome</th>
+                                <th>Email</th>
+                                <th>Telefone</th>
+                                <th>Actions</th>
                             </tr>
                         </thead>
                     
-                        <tbody data-name="client-list">
+                        <tbody data-name="book-list">
 
                         </tbody>
                     </table>
-                </div>
+                <!-- </div> -->
             </p>
 
             <hr>
